--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.jaimemartz</groupId>
     <artifactId>lobbybalancer</artifactId>
-    <version>2.0.4</version>
+    <version>2.0.5</version>
     <name>LobbyBalancer</name>
 
     <repositories>
@@ -21,6 +21,10 @@
         <repository>
             <id>inventive-repo</id>
             <url>http://repo.inventivetalent.org/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>mcstats-repo</id>
+            <url>http://repo.mcstats.org/content/repositories/public</url>
         </repository>
     </repositories>
     <build>
@@ -46,6 +50,12 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <relocations>
+                                <relocation>
+                                    <pattern>org.mcstats</pattern>
+                                    <shadedPattern>me.jaimemartz.lobbybalancer</shadedPattern>
+                                </relocation>
+                            </relocations>
                             <minimizeJar>true</minimizeJar>
                         </configuration>
                     </execution>
@@ -72,6 +82,12 @@
             <artifactId>RedisBungee</artifactId>
             <version>0.3.8-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mcstats.bungee</groupId>
+            <artifactId>metrics</artifactId>
+            <version>R7</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.inventivetalent.update</groupId>
