--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -23,6 +23,9 @@ settings:
   # Whether the plugin should ask you to update or not
   check-updates: true
 
+  # Disable this to opt-out of the plugin sending stats
+  submit-stats: true
+
   # Pings to the servers to see if they can be accessed or not
   server-check:
     # If this is disabled the players will connect to the first server available
