--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.jaimemartz</groupId>
     <artifactId>lobbybalancer</artifactId>
-    <version>2.0.9.2</version>
+    <version>2.0.9.3</version>
     <name>LobbyBalancer</name>
 
     <properties>
@@ -30,6 +30,10 @@
             <id>xephi-repo</id>
             <url>http://ci.xephi.fr/plugin/repository/everything/</url>
         </repository>
+        <repository>
+            <id>bstats-repo</id>
+            <url>https://repo.bstats.org/content/groups/public/</url>
+        </repository>
     </repositories>
     <build>
         <defaultGoal>clean install</defaultGoal>
@@ -47,15 +51,21 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.4.3</version>
+                <configuration>
+                    <minimizeJar>true</minimizeJar>
+                    <relocations>
+                        <relocation>
+                            <pattern>org.bstats</pattern>
+                            <shadedPattern>me.jaimemartz.lobbybalancer</shadedPattern>
+                        </relocation>
+                    </relocations>
+                </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
-                        <configuration>
-                            <minimizeJar>true</minimizeJar>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -96,6 +106,12 @@
             <groupId>com.maxmind.geoip2</groupId>
             <artifactId>geoip2</artifactId>
             <version>2.8.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bungeecord</artifactId>
+            <version>LATEST</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
