Push with MinecraftDev plugin manager

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,4 @@ name: LobbyBalancer
 main: me.jaimemartz.lobbybalancer.LobbyBalancer
 version: ${project.version}
 author: jaime29010
-softdepend: [RedisBungee, LibraryLoader]
+softdepend: [RedisBungee]
