Some changes before getting rid of ConnectionIntent

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -106,7 +106,7 @@ settings:
   fallback-principal: true
 
   # This will update the recognized servers every minute
-  servers-update: true
+  servers-update: false
 
   # Comment a message to disable it
   messages:
