--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: LobbyBalancer
-main: me.jaimemartz.lobbybalancer.LobbyBalancer
+main: com.jaimemartz.playerbalancer.PlayerBalancer
 version: ${project.version}
 author: jaime29010
 softdepend: [RedisBungee]
