--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.jaimemartz</groupId>
     <artifactId>playerbalancer</artifactId>
     <version>2.1-dev</version>
-    <name>LobbyBalancer</name>
+    <name>PlayerBalancer</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
